--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Student form title</title>
+  <title>Student Details Form</title>
   <meta name="viewport" content= "width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./main.css">
 </head>
